# SigmaRPG

./: CMakeLists.txt  README.md
include/: Animation.h  AssetsManager.h  DEFINITIONS.h  Game.h  GameState.h  InputManager.h  Logger.h  MainMenuState.h  Movement.h  Player.h  SplashState.h  State.h  StateMachine.h
src/: Animation.cpp  AssetsManager.cpp  CMakeLists.txt  Game.cpp  GameState.cpp  InputManager.cpp  Logger.cpp  MainMenuState.cpp  Movement.cpp  Player.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
